[package]
name = "buggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {  version="0.13" }
hyper = { version="0.14", features=["full"] }
hyper-tls = { version="0.5" }
oauth = { version = "0.5", package = "oauth1-request" }
serde = { version = ">0" }
serde_json = { version = ">0" }
tokio = { version="1", features=["full"] }
